--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   <meta name="keywords" content="Raphael, Witt, Raphael Witt, Geoinformatics, Student">
   <title>Raphael Witt</title>
 
+  <!-- Leaflet CSS/JS -->
 <!--   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script> -->
+  
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
@@ -64,13 +63,10 @@
         <div class="col-md-6">
           <img src="img/raphael.jpg" class="mx-auto d-block rounded" alt="Bild"/>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
           <h3> Raphael Witt </h3>
-          <p> Mein Name ist Raphael Witt, und das ist meine eigene Website.
-          Sie wird während meines Studiums der Geoinformatik an der Universität in Münster stetig erweitert. </p>
-          <p> Hier finden Sie eine Übersicht über meinen Lebenslauf, Hobbies und Projekte, an denen ich arbeite. Des Weiteren können Sie
-            meine Social Media Portale aufrufen.
-          </p>
+          <p> Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines Masterstudiums der Geoinformatik an der Universität in Münster stetig erweitert. </p>
+          <p> Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
         </div>
       </div>
     </div>
@@ -87,7 +83,7 @@
           <tbody>
             <tr>
               <td colspan="10">Master of Science, Geoinformatics<br/>
-              Westfälische Wilhelms Universität Münster</td>
+              Westfälische Wilhelms-Universität Münster</td>
               <td align="right">10/2017 – 09/2019</td>
             </tr>
             <tr>
@@ -150,22 +146,17 @@
           <tbody>
             <tr>
               <td colspan="3"><b>Projekt Supporting remote collaboration with Augmented Reality and architectural plans</b>
-                <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping">Github</a>.</td>
+                <br/>Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
                 <td align="right">SS 2018</td>
               </tr>
-              <tr>
-                <td colspan="3"><b>Projekt Copernicus II</b>
-                  <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping">Github</a>.</td>
-                  <td align="right">SS 2018</td>
-                </tr>
                 <tr>
                   <td colspan="3"><b>Projekt Geoinformation in Society</b>
-                    <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society">Github</a>.</td>
+                    <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society" target="_blank">Github</a>.</td>
                     <td align="right">WS 2017/2018</td>
                   </tr>
                   <tr>
                     <td colspan="3"><b>Projekt Geomatics and Participation</b>
-                      <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping">Github</a>.</td>
+                      <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping" target="_blank">Github</a>.</td>
                       <td align="right">SS 2017</td>
                     </tr>
                   </tbody>
@@ -180,7 +171,7 @@
                 <div class="col-md-6 col-sm-6" style="padding: 15px">
                   <h3> Kontakt </h3>
                   <address>
-                    Raphael Witt <br> Steinfurter Straße 73, Zimmer 401 <br> 48149 Münster <br>
+                    Raphael Witt <br>
                     <a href="mailto:raphaelwitt@web.de"> raphaelwitt at web.de </a>
                   </address>
                 </div>
@@ -214,12 +205,13 @@
 
             <footer>
               <div class="container text-center">
-                <p>Copyright &copy; Raphael Witt, 2018</p>
+                <p>Copyright &copy; Raphael Witt (2018)</p>
               </div>
             </footer>
 
           </div>
 
+<!-- Karte via Leaflet -->
 <!--     <div id="mapid" style="width: 60%; height: 320px; margin: auto; margin-top: 20px; margin-bottom: 20px"></div>
 -->
 <!--   <script>
