--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Default information -->
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+  <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1, minimum-scale=1, width=device-width">
   <!-- Own information -->
   <!-- Encoding -->
   <meta charset="UTF-8">
@@ -16,12 +16,9 @@
   <meta name="keywords" content="Raphael, Witt, Raphael Witt, Geoinformatics, Student">
   <title>Raphael Witt</title>
 
-  <!-- Leaflet CSS/JS -->
-<!--   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script> -->
-  
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
@@ -29,207 +26,168 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
-  <style type="text/css">
-  .vertical-align {
-    display: flex;
-    align-items: center;
-  }
-
-</style>
-
 </head>
 
 <body>
-
-  <nav class="navbar navbar-light navbar-expand-md bg-dark navbar-dark justify-content-center">
-    <div class="navbar justify-content-between align-items-center w-100">
-      <ul class="navbar-nav mx-auto text-center" style="text-decoration-color: white">
-        <li class="nav-item">
-          <a class="nav-link" href="#Lebenslauf">Lebenslauf</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Stipendien">Stipendien und Preise</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Projekte">Projekte</a> 
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="container-fluid" style="background-color: darkgray">
-    <div class="container" style="padding: 15px">
-      <div class="row vertical-align">
-        <div class="col-md-6">
-          <img src="img/raphael.jpg" class="mx-auto d-block rounded" alt="Bild"/>
+  <div class="container" align="center">
+  <div class="row">
+    <div class="col-sm col-md col-lg">
+        <div class="flip-card">
+            <div class="flip-card-inner" >
+              <div class="flip-card-front">
+        <img src="img/raphael.jpg" alt="Profilbild" style="margin-top:50px">
+      </div>
+      <div class="flip-card-back" style="overflow-y:scroll">
+        <div style="padding:10px">
+        <p style="padding: 10px">Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines Masterstudiums der Geoinformatik an der Universität in Münster stetig erweitert.</p> 
+        <p>Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
+        <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p">
+          <img src="img/xing.png" width="50 em" height="50 em"/>
+        </a>
+        <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/">
+          <img src="img/linkedin.png" width="50 em" height="50/">
+        </a>
+        <a href="https://github.com/RaphaelW1tt">
+          <img src="img/github.png" width="50 em" height="50/">
+        </a>
+        <a href="https://www.researchgate.net/profile/Raphael_Witt">
+          <img src="img/researchgate.png" width="50 em" height="50/">
+          </a>
         </div>
-        <div class="col-md-5">
-          <h3> Raphael Witt </h3>
-          <p> Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines Masterstudiums der Geoinformatik an der Universität in Münster stetig erweitert. </p>
-          <p> Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="container" style="margin-top: 20px">
-    <div class="card">
-      <div class="card-header" style="text-align: center;background-color: lightgray" id="Lebenslauf">
-        Lebenslauf
-      </div>
-      <div class="card-body">
-        <h5> Studium und Schule </h5>
-        <table class="table table-borderless table-hover">
-          <tbody>
-            <tr>
-              <td colspan="10">Master of Science, Geoinformatics<br/>
-              Westfälische Wilhelms-Universität Münster</td>
-              <td align="right">10/2017 – 09/2019</td>
-            </tr>
-            <tr>
-              <td colspan="10">Bachelor of Science, Geoinformationsmanagement<br/>
-              Hochschule Karlsruhe – Technik und Wirtschaft</td>
-              <td align="right">10/2013 – 06/2017</td>
-            </tr>
-            <tr>
-              <td colspan="10">Abitur</br>
-              Gymnasium Walldorf</td>
-              <td align="right">09/2005 – 06/2013</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
+  <div class="col-sm">
 
-  <div class="container" style="margin-top: 20px">
-    <div class="card">
-      <div class="card-header" style="text-align: center;background-color: lightgray" id="Stipendien">
-        Stipendien und Preise
+  <div class="flip-card" >
+    <div class="flip-card-inner" >
+      <div class="flip-card-front" >
+        <div>
+            <img src="img/college.png" alt="scholarship" style="margin: 0 auto 0 auto; padding-top: 70px">
+          </div>
       </div>
-      <div class="card-body">
+      <div class="flip-card-back" style="overflow-y: scroll">
         <table class="table table-borderless table-hover">
-          <tbody>
-            <tr>
-              <td colspan="3">Förderpreis der Deutschen Gesellschaft für Kartographie e.V. (DGfK e.V.)</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">Baden-Württemberg Stipendium</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">e-Follows.net Stipendium</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">careerLoft Stipendium</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">Geographie-Preis des Gymnasiums Walldorf</td>
-              <td>2013</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-
-  <div class="container" style="margin-top: 20px">
-    <div class="card">
-      <div class="card-header" style="text-align: center;background-color: lightgray" id="Projekte">
-        Projekte
-      </div>
-      <div class="card-body">
-        <table class="table table-borderless table-hover">
-          <tbody>
-            <tr>
-              <td colspan="3"><b>Projekt Supporting remote collaboration with Augmented Reality and architectural plans</b>
-                <br/>Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
-                <td align="right">SS 2018</td>
+          <thead>
+              <th colspan="4" style="text-align:center">
+                  Studium
+                </th>
+          </thead>
+            <tbody>
+              <tr>
+                <td colspan="3" style="text-align:left">Master of Science, <i>Geoinformatics</i>
+                  <br/> Westfälische Wilhelms-Universität Münster</td>
+                <td align="right">10/2017 – 09/2019</td>
               </tr>
-                <tr>
-                  <td colspan="3"><b>Projekt Geoinformation in Society</b>
-                    <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society" target="_blank">Github</a>.</td>
-                    <td align="right">WS 2017/2018</td>
-                  </tr>
+              <tr>
+                <td colspan="3" style="text-align:left">Bachelor of Science, <i>Geo-Informationsmanagement</i><br/>
+                Hochschule Karlsruhe – Technik und Wirtschaft</td>
+                <td align="right">10/2013 – 06/2017</td>
+              </tr>
+              <tr>
+                <td colspan="3" style="text-align:left">Abitur</br>
+                Gymnasium Walldorf</td>
+                <td align="right">09/2005 – 06/2013</td>
+              </tr>
+            </tbody>
+          </table>
+      </div>
+    </div>
+
+</div>
+</div>
+</div>
+
+  <div class="row">
+      <div class="col-sm">
+
+  <div class="flip-card" >
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <div>
+              <img src="img/project.png" alt="Project" style="margin: 0 auto 0 auto; padding-top: 70px">
+            </div>
+        </div>
+        <div class="flip-card-back" style="overflow-y: scroll">
+            <table class="table table-borderless table-hover">
+                <thead>
+                    <th colspan="4" style="text-align:center">
+                        Projekte
+                    </th> 
+                </thead>
+                <tbody>
                   <tr>
-                    <td colspan="3"><b>Projekt Geomatics and Participation</b>
-                      <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping" target="_blank">Github</a>.</td>
-                      <td align="right">SS 2017</td>
+                    <td colspan="3" style="text-align:left"><b>Projekt Supporting remote collaboration with Augmented Reality and architectural plans</b>
+                      <br/>Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
+                      <td align="right">SS 2018</td>
+                    </tr>
+                      <tr>
+                        <td colspan="3" style="text-align:left"><b>Projekt Geoinformation in Society</b>
+                          <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society" target="_blank">Github</a>.</td>
+                          <td align="right">WS 2017/2018</td>
+                        </tr>
+                        <tr>
+                          <td colspan="3" style="text-align:left"><b>Projekt Geomatics and Participation</b>
+                            <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping" target="_blank">Github</a>.</td>
+                            <td align="right">SS 2017</td>
+                          </tr>
+                        </tbody>
+                      </table>
+        </div>
+      </div>
+    </div>
+      </div>
+
+      <div class="col-sm">
+          <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+            <div>
+                <img src="img/award.png" alt="scholarship" style="margin: 0 auto 0 auto; padding-top: 70px;">
+              </div>
+          </div>
+          <div class="flip-card-back" style="overflow-y: scroll">
+              <table class="table table-borderless table-hover">
+                  <thead>
+                    <th colspan="4" style="text-align:center">
+                      Stipendien
+                    </th>
+                    </thead>
+                  <tbody>
+                    <tr>
+                      <td colspan="3" style="text-align:left">Förderpreis der Deutschen Gesellschaft für Kartographie e.V. (DGfK e.V.)</td>
+                      <td>2017</td>
+                    </tr>
+                    <tr>
+                      <td colspan="3" style="text-align:left">Baden-Württemberg Stipendium</td>
+                      <td>2017</td>
+                    </tr>
+                    <tr>
+                      <td colspan="3" style="text-align:left">e-Follows.net Stipendium</td>
+                      <td>2017</td>
+                    </tr>
+                    <tr>
+                      <td colspan="3" style="text-align:left">careerLoft Stipendium</td>
+                      <td>2017</td>
+                    </tr>
+                    <tr>
+                      <td colspan="3" style="text-align:left">Geographie-Preis des Gymnasiums Walldorf</td>
+                      <td>2013</td>
                     </tr>
                   </tbody>
                 </table>
-              </div>
-            </div>
           </div>
-
-          <div class="container-fluid" style="margin-top: 20px; background-color: lightgray">
-            <div class="container" style="background-color: lightgray">
-              <div class="row">
-                <div class="col-md-6 col-sm-6" style="padding: 15px">
-                  <h3> Kontakt </h3>
-                  <address>
-                    Raphael Witt <br>
-                    <a href="mailto:raphaelwitt@web.de"> raphaelwitt at web.de </a>
-                  </address>
-                </div>
-                <div class="col-md-6 col-sm-6" style="padding: 15px">
-                  <h4> Portale </h4>
-                  <div class="row">
-                    <div class="col-2">
-                      <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p">
-                        <img src="img/xing.png" width="50 em" height="50 em"/>
-                      </a>
-                    </div>
-                    <div class="col-2">
-                      <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/">
-                        <img src="img/linkedin.png" width="50 em" height="50/">
-                      </a>
-                    </div>
-                    <div class="col-2">
-                      <a href="https://github.com/RaphaelW1tt">
-                        <img src="img/github.png" width="50 em" height="50/">
-                      </a>
-                    </div>
-                    <div class="col-2">
-                      <a href="https://www.researchgate.net/profile/Raphael_Witt">
-                        <img src="img/researchgate.png" width="50 em" height="50/">
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <footer>
-              <div class="container text-center">
-                <p>Copyright &copy; Raphael Witt (2018)</p>
-              </div>
-            </footer>
-
-          </div>
-
-<!-- Karte via Leaflet -->
-<!--     <div id="mapid" style="width: 60%; height: 320px; margin: auto; margin-top: 20px; margin-bottom: 20px"></div>
--->
-<!--   <script>
-
-   var mymap = L.map('mapid').setView([51.972103, 7.606758], 16);
-
-   L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-    maxZoom: 18,
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-    '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-    'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-    id: 'mapbox.streets'
-  }).addTo(mymap);
-
-   var marker = L.marker([51.972103, 7.606758]).addTo(mymap);
-   marker.bindPopup("Hier wohne ich zurzeit");
-
- </script> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <div style="text-align:center;background-color: darkgray;margin-top: 10px">
+      <span>Copyright &copy; Raphael Witt (2018)</span>
+  </div>
+  
+</div>
 
 </body>
 
