Formatting and commenting files

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="de">
 
 <head>
   <!-- Default information -->
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1, minimum-scale=1, width=device-width">
+
   <!-- Own information -->
   <!-- Encoding -->
   <meta charset="UTF-8">
   <!-- Description of Web Page -->
-  <meta name="description" content="Raphael Witt's Website">
+  <meta name="description" content="Website of Raphael Witt">
   <!-- Keywords important for Google -->
   <meta name="keywords" content="Raphael, Witt, Raphael Witt, Geoinformatics, Student">
+
   <title>Raphael Witt</title>
 
   <!-- Latest compiled and minified CSS -->
@@ -29,165 +31,161 @@
 </head>
 
 <body>
+
   <div class="container" align="center">
-  <div class="row">
-    <div class="col-sm col-md col-lg">
+    <div class="row">
+      <div class="col-sm col-md col-lg">
         <div class="flip-card">
-            <div class="flip-card-inner" >
-              <div class="flip-card-front">
-        <img src="img/raphael.jpg" alt="Profilbild" style="margin-top:50px">
-      </div>
-      <div class="flip-card-back" style="overflow-y:scroll">
-        <div style="padding:10px">
-        <p style="padding: 10px">Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines Masterstudiums der Geoinformatik an der Universität in Münster stetig erweitert.</p> 
-        <p>Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
-        <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p">
-          <img src="img/xing.png" width="50 em" height="50 em"/>
-        </a>
-        <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/">
-          <img src="img/linkedin.png" width="50 em" height="50/">
-        </a>
-        <a href="https://github.com/RaphaelW1tt">
-          <img src="img/github.png" width="50 em" height="50/">
-        </a>
-        <a href="https://www.researchgate.net/profile/Raphael_Witt">
-          <img src="img/researchgate.png" width="50 em" height="50/">
-          </a>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-sm">
-
-  <div class="flip-card" >
-    <div class="flip-card-inner" >
-      <div class="flip-card-front" >
-        <div>
-            <img src="img/college.png" alt="scholarship" style="margin: 0 auto 0 auto; padding-top: 70px">
-          </div>
-      </div>
-      <div class="flip-card-back" style="overflow-y: scroll">
-        <table class="table table-borderless table-hover">
-          <thead>
-              <th colspan="4" style="text-align:center">
-                  Studium
-                </th>
-          </thead>
-            <tbody>
-              <tr>
-                <td colspan="3" style="text-align:left">Master of Science, <i>Geoinformatics</i>
-                  <br/> Westfälische Wilhelms-Universität Münster</td>
-                <td align="right">10/2017 – 09/2019</td>
-              </tr>
-              <tr>
-                <td colspan="3" style="text-align:left">Bachelor of Science, <i>Geo-Informationsmanagement</i><br/>
-                Hochschule Karlsruhe – Technik und Wirtschaft</td>
-                <td align="right">10/2013 – 06/2017</td>
-              </tr>
-              <tr>
-                <td colspan="3" style="text-align:left">Abitur</br>
-                Gymnasium Walldorf</td>
-                <td align="right">09/2005 – 06/2013</td>
-              </tr>
-            </tbody>
-          </table>
-      </div>
-    </div>
-
-</div>
-</div>
-</div>
-
-  <div class="row">
-      <div class="col-sm">
-
-  <div class="flip-card" >
-      <div class="flip-card-inner">
-        <div class="flip-card-front">
-          <div>
-              <img src="img/project.png" alt="Project" style="margin: 0 auto 0 auto; padding-top: 70px">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="img/raphael.jpg" alt="Profilbild" style="margin-top:50px">
             </div>
+            <div class="flip-card-back" style="overflow-y:scroll">
+              <div style="padding:10px">
+                <p style="padding: 10px">Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines
+                  Masterstudiums der Geoinformatik an der Universität in Münster stetig erweitert.</p>
+                <p>Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
+                <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p" target="_blank">
+                  <img src="img/xing.png" width="50 em" height="50 em" />
+                </a>
+                <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/" target="_blank">
+                  <img src="img/linkedin.png" width="50 em" height="50/">
+                </a>
+                <a href="https://github.com/RaphaelW1tt" target="_blank">
+                  <img src="img/github.png" width="50 em" height="50/">
+                </a>
+                <a href="https://www.researchgate.net/profile/Raphael_Witt" target="_blank">
+                  <img src="img/researchgate.png" width="50 em" height="50/">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="flip-card-back" style="overflow-y: scroll">
-            <table class="table table-borderless table-hover">
+      </div>
+
+      <div class="col-sm">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="img/college.png" alt="Studium" style="padding-top: 70px">
+            </div>
+            <div class="flip-card-back" style="overflow-y: scroll">
+              <table class="table table-borderless table-hover">
                 <thead>
-                    <th colspan="4" style="text-align:center">
-                        Projekte
-                    </th> 
+                  <th colspan="4" style="text-align:center">
+                    Studium
+                  </th>
                 </thead>
                 <tbody>
                   <tr>
-                    <td colspan="3" style="text-align:left"><b>Projekt Supporting remote collaboration with Augmented Reality and architectural plans</b>
-                      <br/>Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
-                      <td align="right">SS 2018</td>
-                    </tr>
-                      <tr>
-                        <td colspan="3" style="text-align:left"><b>Projekt Geoinformation in Society</b>
-                          <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society" target="_blank">Github</a>.</td>
-                          <td align="right">WS 2017/2018</td>
-                        </tr>
-                        <tr>
-                          <td colspan="3" style="text-align:left"><b>Projekt Geomatics and Participation</b>
-                            <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping" target="_blank">Github</a>.</td>
-                            <td align="right">SS 2017</td>
-                          </tr>
-                        </tbody>
-                      </table>
+                    <td colspan="3" style="text-align:left">Master of Science, <i>Geoinformatics</i>
+                      <br /> Westfälische Wilhelms-Universität Münster</td>
+                    <td style="text-align:right">10/2017 – 09/2019</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left">Bachelor of Science, <i>Geo-Informationsmanagement</i><br />
+                      Hochschule Karlsruhe – Technik und Wirtschaft</td>
+                    <td style="text-align:right">10/2013 – 06/2017</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left">Abitur</br>
+                      Gymnasium Walldorf</td>
+                    <td style="text-align:right">09/2005 – 06/2013</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-sm">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="img/project.png" alt="Projekte" style="padding-top: 70px">
+            </div>
+            <div class="flip-card-back" style="overflow-y: scroll">
+              <table class="table table-borderless table-hover">
+                <thead>
+                  <th colspan="4" style="text-align:center">
+                    Projekte
+                  </th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td colspan="3" style="text-align:left"><b>Projekt Supporting remote collaboration with Augmented
+                        Reality and architectural plans</b>
+                      <br />Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
+                    <td style="text-align:right">SS 2018</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left"><b>Projekt Geoinformation in Society</b>
+                      <br />Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society"
+                        target="_blank">Github</a>.</td>
+                    <td style="text-align:right">WS 2017/2018</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left"><b>Projekt Geomatics and Participation</b>
+                      <br />Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping"
+                        target="_blank">Github</a>.</td>
+                    <td style="text-align:right">SS 2017</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="col-sm">
-          <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-            <div>
-                <img src="img/award.png" alt="scholarship" style="margin: 0 auto 0 auto; padding-top: 70px;">
-              </div>
-          </div>
-          <div class="flip-card-back" style="overflow-y: scroll">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="img/award.png" alt="Stipendien" style="padding-top: 70px;">
+            </div>
+            <div class="flip-card-back" style="overflow-y: scroll">
               <table class="table table-borderless table-hover">
-                  <thead>
-                    <th colspan="4" style="text-align:center">
-                      Stipendien
-                    </th>
-                    </thead>
-                  <tbody>
-                    <tr>
-                      <td colspan="3" style="text-align:left">Förderpreis der Deutschen Gesellschaft für Kartographie e.V. (DGfK e.V.)</td>
-                      <td>2017</td>
-                    </tr>
-                    <tr>
-                      <td colspan="3" style="text-align:left">Baden-Württemberg Stipendium</td>
-                      <td>2017</td>
-                    </tr>
-                    <tr>
-                      <td colspan="3" style="text-align:left">e-Follows.net Stipendium</td>
-                      <td>2017</td>
-                    </tr>
-                    <tr>
-                      <td colspan="3" style="text-align:left">careerLoft Stipendium</td>
-                      <td>2017</td>
-                    </tr>
-                    <tr>
-                      <td colspan="3" style="text-align:left">Geographie-Preis des Gymnasiums Walldorf</td>
-                      <td>2013</td>
-                    </tr>
-                  </tbody>
-                </table>
+                <thead>
+                  <th colspan="4" style="text-align:center">
+                    Stipendien
+                  </th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td colspan="3" style="text-align:left">Förderpreis der Deutschen Gesellschaft für Kartographie
+                      e.V. (DGfK e.V.)</td>
+                    <td style="text-align:right">2017</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left">Baden-Württemberg Stipendium</td>
+                    <td style="text-align:right">2017</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left">e-Follows.net Stipendium</td>
+                    <td style="text-align:right">2017</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left">careerLoft Stipendium</td>
+                    <td style="text-align:right">2017</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align:left">Geographie-Preis des Gymnasiums Walldorf</td>
+                    <td style="text-align:right">2013</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
-      </div>
+      </div> 
+    </div>
+    <div style="text-align:center;background-color: darkgray;margin-top: 10px">
+      <span>Copyright &copy; Raphael Witt (2018)</span>
     </div>
   </div>
-  <div style="text-align:center;background-color: darkgray;margin-top: 10px">
-      <span>Copyright &copy; Raphael Witt (2018)</span>
-  </div>
-  
-</div>
 
 </body>
 
