--- a/index.html
+++ b/index.html
@@ -1,235 +1,230 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="de">
 
 <head>
   <!-- Default information -->
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+
   <!-- Own information -->
   <!-- Encoding -->
   <meta charset="UTF-8">
   <!-- Description of Web Page -->
-  <meta name="description" content="Raphael Witt's Website">
+  <meta name="description" content="Webseite von Raphael Witt">
   <!-- Keywords important for Google -->
-  <meta name="keywords" content="Raphael, Witt, Raphael Witt, Geoinformatics, Student">
+  <meta name="keywords" content="Raphael, Witt, Raphael Witt, Geoinformatik, Student">
   <title>Raphael Witt</title>
 
-  <!-- Leaflet CSS/JS -->
-<!--   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script> -->
-  
-  <!-- Latest compiled and minified CSS -->
+  <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
   <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
+  <!-- jQuery JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Latest compiled Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
-  <style type="text/css">
-  .vertical-align {
-    display: flex;
-    align-items: center;
-  }
+  <!-- ToDo: 
+  - Language switch -->
 
-</style>
+  <style type="text/css">
+    .vertical-align {
+      display: flex;
+      align-items: center;
+    }
+  </style>
 
 </head>
 
 <body>
-
-  <nav class="navbar navbar-light navbar-expand-md bg-dark navbar-dark justify-content-center">
-    <div class="navbar justify-content-between align-items-center w-100">
-      <ul class="navbar-nav mx-auto text-center" style="text-decoration-color: white">
-        <li class="nav-item">
-          <a class="nav-link" href="#Lebenslauf">Lebenslauf</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Stipendien">Stipendien und Preise</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Projekte">Projekte</a> 
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="container-fluid" style="background-color: darkgray">
-    <div class="container" style="padding: 15px">
-      <div class="row vertical-align">
-        <div class="col-md-6">
-          <img src="img/raphael.jpg" class="mx-auto d-block rounded" alt="Bild"/>
-        </div>
-        <div class="col-md-5">
-          <h3> Raphael Witt </h3>
-          <p> Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines Masterstudiums der Geoinformatik an der Universität in Münster stetig erweitert. </p>
-          <p> Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
+  <header>
+    <div class="container-fluid" style="background-color: lightgray">
+      <div class="container" style="padding: 15px">
+        <div class="row vertical-align">
+          <div class="col-md-6">
+            <img src="img/raphael.jpg" alt="Profilbild" class="mx-auto d-block rounded" alt="Bild" />
+          </div>
+          <div class="col-md-5" style="text-align:center; margin-top: 15px">
+            <h3> Raphael Witt </h3>
+            <p> Mein Name ist Raphael Witt und das ist meine Website. Sie wird während meines Masterstudiums der
+              Geoinformatik an der Universität in Münster stetig erweitert. </p>
+            <p> Hier finden Sie eine Übersicht über meinen Lebenslauf und Projekte, an denen ich arbeite. </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </header>
 
-  <div class="container" style="margin-top: 20px">
-    <div class="card">
-      <div class="card-header" style="text-align: center;background-color: lightgray" id="Lebenslauf">
-        Lebenslauf
-      </div>
-      <div class="card-body">
-        <h5> Studium und Schule </h5>
-        <table class="table table-borderless table-hover">
-          <tbody>
-            <tr>
-              <td colspan="10">Master of Science, Geoinformatics<br/>
-              Westfälische Wilhelms-Universität Münster</td>
-              <td align="right">10/2017 – 09/2019</td>
-            </tr>
-            <tr>
-              <td colspan="10">Bachelor of Science, Geoinformationsmanagement<br/>
-              Hochschule Karlsruhe – Technik und Wirtschaft</td>
-              <td align="right">10/2013 – 06/2017</td>
-            </tr>
-            <tr>
-              <td colspan="10">Abitur</br>
-              Gymnasium Walldorf</td>
-              <td align="right">09/2005 – 06/2013</td>
-            </tr>
-          </tbody>
-        </table>
+  <main>
+    <div class="container" style="margin-top: 20px">
+      <div class="card">
+        <div class="card-header" style="text-align: center;background-color: lightgray" id="Lebenslauf">
+          Lebenslauf
+        </div>
+        <div class="card-body">
+          <h5> Studium und Schule </h5>
+          <table class="table table-borderless table-hover">
+            <tbody>
+              <tr>
+                <td colspan="3">Master of Science, <i>Geoinformatics</i><br />
+                  Westfälische Wilhelms-Universität Münster</td>
+                <td align="right">10/2017 – 09/2019</td>
+              </tr>
+              <tr>
+                <td colspan="3">Bachelor of Science, <i>Geoinformations-Management</i><br />
+                  Hochschule Karlsruhe – Technik und Wirtschaft</td>
+                <td align="right">10/2013 – 06/2017</td>
+              </tr>
+              <tr>
+                <td colspan="3">Abitur</br>
+                  Gymnasium Walldorf</td>
+                <td align="right">09/2005 – 06/2013</td>
+              </tr>
+            </tbody>
+          </table>
+          <h5> Arbeitserfahrung </h5>
+          <table class="table table-borderless table-hover">
+            <tbody>
+              <tr>
+                <td colspan="3">SAP SE</td>
+                <td style="text-align:center">Praktikum</td>
+                <td align="right">09/2018 – 02/2019</td>
+              </tr>
+              <tr>
+                <td colspan="3">Westfälische Wilhelms-Universität Münster</td>
+                <td style="text-align:center">Studentische Hilfskraft</td>
+                <td align="right">03/2018 – 08/2018</td>
+              </tr>
+              <tr>
+                <td colspan="3">PTV GROUP</td>
+                <td style="text-align:center">Studentische Hilfskraft</td>
+                <td align="right">08/2016 – 08/2017</td>
+              </tr>
+              <tr>
+                <td colspan="3">WIGeoGIS GmbH</td>
+                <td style="text-align:center">Praktikum</td>
+                <td align="right">09/2015 – 02/2016</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="container" style="margin-top: 20px">
-    <div class="card">
-      <div class="card-header" style="text-align: center;background-color: lightgray" id="Stipendien">
-        Stipendien und Preise
-      </div>
-      <div class="card-body">
-        <table class="table table-borderless table-hover">
-          <tbody>
-            <tr>
-              <td colspan="3">Förderpreis der Deutschen Gesellschaft für Kartographie e.V. (DGfK e.V.)</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">Baden-Württemberg Stipendium</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">e-Follows.net Stipendium</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">careerLoft Stipendium</td>
-              <td>2017</td>
-            </tr>
-            <tr>
-              <td colspan="3">Geographie-Preis des Gymnasiums Walldorf</td>
-              <td>2013</td>
-            </tr>
-          </tbody>
-        </table>
+    <div class="container" style="margin-top: 20px">
+      <div class="card">
+        <div class="card-header" style="text-align: center;background-color: lightgray" id="Stipendien">
+          Stipendien und Preise
+        </div>
+        <div class="card-body">
+          <table class="table table-borderless table-hover">
+            <tbody>
+              <tr>
+                <td colspan="3">Förderpreis der Deutschen Gesellschaft für Kartographie e.V. (DGfK e.V.)</td>
+                <td>2017</td>
+              </tr>
+              <tr>
+                <td colspan="3">Baden-Württemberg Stipendium</td>
+                <td>2017</td>
+              </tr>
+              <tr>
+                <td colspan="3">e-Follows.net Stipendium</td>
+                <td>2017</td>
+              </tr>
+              <tr>
+                <td colspan="3">careerLoft Stipendium</td>
+                <td>2017</td>
+              </tr>
+              <tr>
+                <td colspan="3">Geographie-Preis des Gymnasiums Walldorf</td>
+                <td>2013</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="container" style="margin-top: 20px">
-    <div class="card">
-      <div class="card-header" style="text-align: center;background-color: lightgray" id="Projekte">
-        Projekte
-      </div>
-      <div class="card-body">
-        <table class="table table-borderless table-hover">
-          <tbody>
-            <tr>
-              <td colspan="3"><b>Projekt Supporting remote collaboration with Augmented Reality and architectural plans</b>
-                <br/>Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
+    <div class="container" style="margin-top: 20px">
+      <div class="card">
+        <div class="card-header" style="text-align: center;background-color: lightgray" id="Projekte">
+          Projekte
+        </div>
+        <div class="card-body">
+          <table class="table table-borderless table-hover">
+            <tbody>
+              <tr>
+                <td colspan="3"><b>Projekt Supporting remote collaboration with Augmented Reality and architectural
+                    plans</b>
+                  <br />Der Quellcode für dieses Projekt ist noch nicht verfügbar.</td>
                 <td align="right">SS 2018</td>
               </tr>
-                <tr>
-                  <td colspan="3"><b>Projekt Geoinformation in Society</b>
-                    <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society" target="_blank">Github</a>.</td>
-                    <td align="right">WS 2017/2018</td>
-                  </tr>
-                  <tr>
-                    <td colspan="3"><b>Projekt Geomatics and Participation</b>
-                      <br/>Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping" target="_blank">Github</a>.</td>
-                      <td align="right">SS 2017</td>
-                    </tr>
-                  </tbody>
-                </table>
+              <tr>
+                <td colspan="3"><b>Projekt Geoinformation in Society</b>
+                  <br />Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society"
+                    target="_blank">Github</a>.</td>
+                <td align="right">WS 2017/2018</td>
+              </tr>
+              <tr>
+                <td colspan="3"><b>Projekt Geomatics and Participation</b>
+                  <br />Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping"
+                    target="_blank">Github</a>.</td>
+                <td align="right">SS 2017</td>
+              </tr>
+            </tbody>
+          </table>
+          <p style="text-align:center">Auf meinem <a href="https://github.com/RaphaelW1tt">GitHub-Profil</a> sind
+            weitere Projekte zu finden.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid" style="margin-top: 20px; background-color: lightgray">
+      <div class="container" style="background-color: lightgray">
+        <div class="row">
+          <div class="col-md-6 col-sm-6" style="padding: 15px">
+            <h3> Kontakt </h3>
+            <address>
+              Raphael Witt <br>
+              <a href="mailto:raphaelwitt@web.de"> raphaelwitt at web.de </a>
+            </address>
+          </div>
+          <div class="col-md-6 col-sm-6" style="padding: 15px">
+            <h4> Portale </h4>
+            <div class="row">
+              <div class="col-2">
+                <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p" target="_blank">
+                  <img src="img/xing.png" alt="xing" width="50 em" height="50 em" />
+                </a>
+              </div>
+              <div class="col-2">
+                <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/" target="_blank">
+                  <img src="img/linkedin.png" alt="linkedin" width="50 em" height="50/">
+                </a>
+              </div>
+              <div class="col-2">
+                <a href="https://github.com/RaphaelW1tt" target="_blank">
+                  <img src="img/github.png" alt="github" width="50 em" height="50/">
+                </a>
+              </div>
+              <div class="col-2">
+                <a href="https://www.researchgate.net/profile/Raphael_Witt" target="_blank">
+                  <img src="img/researchgate.png" alt="researchgate" width="50 em" height="50/">
+                </a>
               </div>
             </div>
           </div>
-
-          <div class="container-fluid" style="margin-top: 20px; background-color: lightgray">
-            <div class="container" style="background-color: lightgray">
-              <div class="row">
-                <div class="col-md-6 col-sm-6" style="padding: 15px">
-                  <h3> Kontakt </h3>
-                  <address>
-                    Raphael Witt <br>
-                    <a href="mailto:raphaelwitt@web.de"> raphaelwitt at web.de </a>
-                  </address>
-                </div>
-                <div class="col-md-6 col-sm-6" style="padding: 15px">
-                  <h4> Portale </h4>
-                  <div class="row">
-                    <div class="col-2">
-                      <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p">
-                        <img src="img/xing.png" width="50 em" height="50 em"/>
-                      </a>
-                    </div>
-                    <div class="col-2">
-                      <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/">
-                        <img src="img/linkedin.png" width="50 em" height="50/">
-                      </a>
-                    </div>
-                    <div class="col-2">
-                      <a href="https://github.com/RaphaelW1tt">
-                        <img src="img/github.png" width="50 em" height="50/">
-                      </a>
-                    </div>
-                    <div class="col-2">
-                      <a href="https://www.researchgate.net/profile/Raphael_Witt">
-                        <img src="img/researchgate.png" width="50 em" height="50/">
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <footer>
-              <div class="container text-center">
-                <p>Copyright &copy; Raphael Witt (2018)</p>
-              </div>
-            </footer>
-
-          </div>
-
-<!-- Karte via Leaflet -->
-<!--     <div id="mapid" style="width: 60%; height: 320px; margin: auto; margin-top: 20px; margin-bottom: 20px"></div>
--->
-<!--   <script>
-
-   var mymap = L.map('mapid').setView([51.972103, 7.606758], 16);
-
-   L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-    maxZoom: 18,
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-    '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-    'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-    id: 'mapbox.streets'
-  }).addTo(mymap);
-
-   var marker = L.marker([51.972103, 7.606758]).addTo(mymap);
-   marker.bindPopup("Hier wohne ich zurzeit");
-
- </script> -->
+        </div>
+      </div>
+      <div class="footer" style="text-align:center">
+        <p style="margin: 0px; font-size: 0.7em">Copyright &copy; Raphael Witt (2019)</p>
+      </div>
+    </div>
+  </main>
 
 </body>
 
