--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
               <tr>
                 <td colspan="3">SAP SE</td>
                 <td style="text-align:center">Praktikum</td>
-                <td align="right">09/2018 – 02/2019</td>
+                <td style="text-align:right">09/2018 – 02/2019</td>
               </tr>
               <tr>
-                <td colspan="3">Westfälische Wilhelms-Universität Münster</td>
-                <td style="text-align:center">Studentische Hilfskraft</td>
-                <td align="right">03/2018 – 08/2018</td>
+                <td colspan="3">WWU Münster</td>
+                <td style="text-align:center">Werkstudent</td>
+                <td style="text-align:right">03/2018 – 08/2018</td>
               </tr>
               <tr>
                 <td colspan="3">PTV GROUP</td>
-                <td style="text-align:center">Studentische Hilfskraft</td>
-                <td align="right">08/2016 – 08/2017</td>
+                <td style="text-align:center">Werkstudent</td>
+                <td style="text-align:right">08/2016 – 08/2017</td>
               </tr>
               <tr>
                 <td colspan="3">WIGeoGIS GmbH</td>
                 <td style="text-align:center">Praktikum</td>
-                <td align="right">09/2015 – 02/2016</td>
+                <td style="text-align:right">09/2015 – 02/2016</td>
               </tr>
             </tbody>
           </table>
@@ -165,13 +165,13 @@
               <tr>
                 <td colspan="3"><b>Projekt Geoinformation in Society</b>
                   <br />Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/GI4Society"
-                    target="_blank">Github</a>.</td>
+                    target="_blank">GitHub</a>.</td>
                 <td align="right">WS 2017/2018</td>
               </tr>
               <tr>
                 <td colspan="3"><b>Projekt Geomatics and Participation</b>
                   <br />Der Quellcode für dieses Projekt ist verfügbar auf <a href="https://github.com/RaphaelW1tt/CommunityMapping"
-                    target="_blank">Github</a>.</td>
+                    target="_blank">GitHub</a>.</td>
                 <td align="right">SS 2017</td>
               </tr>
             </tbody>
@@ -196,24 +196,24 @@
           <div class="col-md-6 col-sm-6" style="padding: 15px">
             <h4> Portale </h4>
             <div class="row">
-              <div class="col-2">
+              <div class="col-3">
                 <a href="https://www.xing.com/profile/Raphael_Witt?sc_o=mxb_p" target="_blank">
                   <img src="img/xing.png" alt="xing" width="50 em" height="50 em" />
                 </a>
               </div>
-              <div class="col-2">
+              <div class="col-3">
                 <a href="https://www.linkedin.com/in/raphael-witt-1a8a82119/" target="_blank">
-                  <img src="img/linkedin.png" alt="linkedin" width="50 em" height="50/">
+                  <img src="img/linkedin.png" alt="linkedin" width="50 em" height="50em" />
                 </a>
               </div>
-              <div class="col-2">
+              <div class="col-3">
                 <a href="https://github.com/RaphaelW1tt" target="_blank">
-                  <img src="img/github.png" alt="github" width="50 em" height="50/">
+                  <img src="img/github.png" alt="github" width="50 em" height="50em" />
                 </a>
               </div>
-              <div class="col-2">
+              <div class="col-3">
                 <a href="https://www.researchgate.net/profile/Raphael_Witt" target="_blank">
-                  <img src="img/researchgate.png" alt="researchgate" width="50 em" height="50/">
+                  <img src="img/researchgate.png" alt="researchgate" width="50 em" height="50em" />
                 </a>
               </div>
             </div>
