Update year + meta information

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Description of Web Page -->
   <meta name="description" content="Website of Raphael Witt">
   <!-- Keywords important for Google -->
-  <meta name="keywords" content="Raphael, Witt, Raphael Witt, Geoinformatics">
+  <meta name="keywords" content="Raphael, Witt, Raphael Witt, personal homepage">
   <title>Raphael Witt</title>
 
   <!-- Latest compiled and minified Bootstrap CSS -->
@@ -68,7 +68,7 @@
     </div>
   </div>
   <p style="height: 3vh; margin:0; text-align:center;font-size:0.75em; background-color: lightgray">Copyright © Raphael
-    Witt (2019)</p>
+    Witt (2020)</p>
 
   <script src="js/index.js"></script>
 </body>
