Add new background

--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <!--Fontawesome - load all icon styles-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-
+  <!-- Pattern css -->
+  <link href="https://unpkg.com/pattern.css" rel="stylesheet">
   <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <!-- jQuery JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-  <div class="container-fluid" style="background-color: lightgray; width: 100vw; height:97vh;">
-    <div class="container" style="height: 97vh">
-      <div class="row align-items-center" style="height: 97vh">
-        <div class="card mx-auto shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  <div class="pattern-diagonal-stripes-xl" style="background-color: white; color: lightgray; width: 100vw; height:100vh;">
+    <div class="container" style="height: 100vh; color: black">
+      <div class="row align-items-center" style="height: 100vh">
+        <div class="card mx-auto shadow p-3 mb-5 bg-white rounded" style="width: 21rem;">
           <img class="card-img-top" src="img/raphael.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Raphael Witt</h5>
-            <p>Geoinformatics Master Student</p>
+            <p>M.Sc. Geoinformatics</p>
             <hr />
             <div class="container">
               <div class="row align-items-center">
@@ -66,9 +66,11 @@
         </div>
       </div>
     </div>
+    <div style="position: absolute; width: 100%; margin: 0 auto; bottom: 5px; color: black; text-align: center">
+      <p style="margin-bottom: 0">Copyright © Raphael Witt (2020)</p>
+      </div>
   </div>
-  <p style="height: 3vh; margin:0; text-align:center;font-size:0.75em; background-color: lightgray">Copyright © Raphael
-    Witt (2020)</p>
+
 
   <script src="js/index.js"></script>
 </body>
