--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
           </div>
         </div>
       </div>
+      <div style="position: absolute; left: 0; right: 0; bottom: 5px; color: black; text-align: center">
+        <p style="margin-bottom: 0">Copyright © Raphael Witt (2020)</p>
+        </div>
     </div>
-    <div style="position: absolute; width: 100%; margin: 0 auto; bottom: 5px; color: black; text-align: center">
-      <p style="margin-bottom: 0">Copyright © Raphael Witt (2020)</p>
-      </div>
   </div>
 
 
