--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
   <div class="pattern-diagonal-stripes-xl" style="background-color: white; color: lightgray; width: 100vw; height:100vh;">
-    <div class="container" style="height: 100vh; color: black">
+    <div class="container" style="height: 100vh; color: black; padding: 0">
       <div class="row align-items-center" style="height: 100vh">
         <div class="card mx-auto shadow p-3 bg-white rounded" style="width: 19rem;">
           <img class="card-img-top" src="img/raphael.jpg" alt="Card image cap">
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div style="position: absolute; left: 0; right: 0; bottom: 5px; color: black; text-align: center">
+        <div style="position: fixed; left: 0; right: 0; bottom: 5px; color: black; text-align: center">
           <p style="margin-bottom: 0">Copyright © Raphael Witt (2020)</p>
           </div>
       </div>
