--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <div class="pattern-diagonal-stripes-xl" style="background-color: white; color: lightgray; width: 100vw; height:100vh;">
     <div class="container" style="height: 100vh; color: black; padding: 0">
-      <div class="row align-items-center" style="height: 100vh">
+      <div class="row align-items-center" style="height: 100vh; margin: 0">
         <div class="card mx-auto shadow p-3 bg-white rounded" style="width: 19rem;">
           <img class="card-img-top" src="img/raphael.jpg" alt="Card image cap">
           <div class="card-body">
