--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <!-- Latest compiled Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="manifest" href="css/manifest.json">
+
 </head>
 
 <body>
