--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Description of Web Page -->
   <meta name="description" content="Website of Raphael Witt">
   <!-- Keywords important for Google -->
-  <meta name="keywords" content="Raphael, Witt, Raphael Witt, personal homepage">
+  <meta name="keywords" content="Raphael Witt, personal homepage">
   <title>Raphael Witt</title>
 
   <!-- Latest compiled and minified Bootstrap CSS -->
@@ -30,11 +30,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+
   <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-  <div class="pattern-diagonal-stripes-xl" style="background-color: white; color: lightgray; width: 100vw; height:100vh;">
+  <div class="pattern-diagonal-stripes-xl"
+    style="background-color: rgb(255, 255, 255); color: rgba(37, 37, 37, 0.199); width: 100vw; height:100vh;">
     <div class="container" style="height: 100vh; color: black; padding: 0">
       <div class="row align-items-center" style="height: 100vh; margin: 0">
         <div class="card mx-auto shadow p-3 bg-white rounded" style="width: 19rem;">
